[package]
name = "entropy_beacon_cosmos"
version = "0.1.1"
authors = ["Amit Prasad <mail@amitprasad.dev>"]
edition = "2021"
license = "MIT"
description = "Entropy Network Beacon API for Cosmos chains"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = "1.0.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
ecvrf = { path = "../ecvrf-rs" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"