[package]
name = "entropy_beacon_cosmos"
version = "2.0.2"
authors = ["Amit Prasad <mail@amitprasad.dev>"]
edition = "2021"
license = "MIT"
description = "Entropy Network Beacon API for Cosmos chains"
repository = "https://github.com/EntropicLabs/entropy_beacon_cosmos"
homepage = "https://entropiclabs.io/beacon/"
documentation = "https://entropiclabs.io/beacon/docs/"

[features]
# Enables the ecvrf-rs crate backend:
ecvrf = ["dep:ecvrf-rs"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = "1.0.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
ecvrf-rs = { version = "1.0.0", optional = true }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
